# openclaw-skills

./: .gitignore  find-skills
copper-price-predictor/: .gitignore  PROJECT_CONTEXT.md  README.md  SKILL.md
copper-price-predictor/config/: prediction_model.json
copper-price-predictor/data/: current_price.csv  latest_news.csv  latest_prediction.csv  learning_log.csv  macro_ai_analysis.json  macro_data.csv  news_analysis.json  predictions.csv  price_history.csv  weight_history.csv
copper-price-predictor/data/validation/: validation_detailed_2026-07-07.csv  validation_detailed_2026-07-10.csv  validation_detailed_2026-07-13.csv  validation_detailed_2026-07-14.csv  validation_detailed_2026-07-15.csv  validation_detailed_2026-07-16.csv  validation_detailed_2026-07-22.csv  (+9 more)
copper-price-predictor/reports/: 2026-07-02_分析报告.txt  2026-07-03_分析报告.txt  2026-07-04_分析报告.txt  2026-07-05_分析报告.txt  2026-07-06_分析报告.txt  2026-07-07_分析报告.txt  2026-07-08_分析报告.txt  2026-07-09_分析报告.txt  2026-07-10_分析报告.txt
copper-price-predictor/scripts/: analyze_and_predict.py  analyze_macro_ai.py  analyze_sentiment_ai.py  cleanup_old_data.py  data_storage.py  fetch_copper_price_v2.py  fetch_historical_prices.py  fetch_macro_data.py  generate_report.py  learning_manager.py  run_mvp.py  search_copper_news.py  test_ai_analysis.py  update_weights.py  validate_predictions.py
mineru/: .gitignore  README.md  README_CN.md  SKILL.md  pyproject.toml  requirements.txt
mineru/.claude-plugin/: plugin.json
mineru/.github/workflows/: ci.yml  publish-skill.yml  release.yml
mineru/references/: comparison.md
mineru/scripts/: __init__.py  build_skill_package.py  chunking.py
mineru/scripts/sinks/: __init__.py  airtable.py  coda.py  linear.py  local.py  onenote.py  siyuan.py  slack.py  ticktick.py  wps.py
mineru/skills/mineru/: SKILL.md
mineru/skills/mineru/references/: api_reference.md  integrations.md
mineru/skills/mineru/scripts/: local_engine.py  mineru.py  mineru_mcp.py  splitter.py
mineru/skills/mineru/scripts/sinks/: _http.py  _md.py  base.py  confluence.py  dingtalk.py  feishu.py  notion.py  roam.py  wecom.py  yuque.py
mineru/tests/: conftest.py  test_chunking.py  test_doctor.py  test_hardening.py  test_live.py  test_local_engine.py  test_mcp.py  test_mineru.py  test_release_surfaces.py  test_sinks_complex.py  test_sinks_core.py  test_sinks_docs.py  test_sinks_enterprise.py  test_sinks_roam.py  test_sinks_wps.py  test_splitter.py
moochmaniac-tavily-search/: _meta.json
moochmaniac-tavily-search/.clawhub/: origin.json
moochmaniac-tavily-search/scripts/: search.py
self-improving-agent/.clawhub/: origin.json
skill-vetting/.clawhub/: origin.json
translate-pdf/scripts/: extract_texts.py  translate_pdf.py
translate-word/: SKILL.md
translate-word/scripts/: extract_texts.py  translate_word.py
using-superpowers/.clawhub/: origin.json
yuyonghao-summarize/.clawhub/: origin.json
(+2 files in other folders)
